some cleaning done

--- a/STM32G4_GY91_Cyphal.ioc
+++ b/STM32G4_GY91_Cyphal.ioc
@@ -119,7 +119,7 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LED2
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Speed,GPIO_Pu
+PB7.GPIOParameters=GPIO_Pu,GPIO_Speed
 PB7.GPIO_Pu=GPIO_NOPULL
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB7.Locked=true
